data/derived/sp14/progs/unify/prog0078.ml.out
Characters 437-449:
  | MyExpr (m,n,o)   -> "(" ^ exprToString m ^ "<" ^ exprToString  ^"?sqrt(|" ^
                                                     ^^^^^^^^^^^^
Error: This expression has type expr -> string
       but an expression was expected of type string
